# hw_qa_guru_python_lesson_22_ui

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
pages/: cart_page.py  login_page.py  main_page.py
swagLabs_ui_tests/: application.py
swagLabs_ui_tests/data/: products.py
swagLabs_ui_tests/pages/: cart.py  checkpout_page.py  common.py  inventory_page.py  login_page.py  product_page.py
swagLabs_ui_tests/utils/: allure_marks.py  attach.py  helpers.py
tests/: conftest.py  test_cart.py  test_inventory_page.py  test_login.py  test_navigation.py
utils/: attach.py
